Fix rhs expansion card resize in resized windows, fix credit card title section being overlapped with the credit card number input hint.

--- a/webapp/channels/src/components/self_hosted_purchases/self_hosted_expansion_modal/expansion_card.scss
+++ b/webapp/channels/src/components/self_hosted_purchases/self_hosted_expansion_modal/expansion_card.scss
@@ -1,6 +1,6 @@
 .SelfHostedExpansionRHSCard {
     display: flex;
-    max-width: 280px;
+    width: 280px;
     flex-direction: column;
 
     &__Content {
