--- a/webapp/channels/src/components/self_hosted_purchases/self_hosted_expansion_modal/self_hosted_expansion_modal.scss
+++ b/webapp/channels/src/components/self_hosted_purchases/self_hosted_expansion_modal/self_hosted_expansion_modal.scss
@@ -58,7 +58,8 @@
             }
 
             .section-title {
-                margin-bottom: 24px;
+                display: block;
+                margin-bottom: 10px;
                 color: rgba(var(--center-channel-color-rgb), 0.72);
                 font-size: 16px;
                 font-weight: 600;
