--- a/webapp/channels/src/components/plugin_marketplace/marketplace_modal.scss
+++ b/webapp/channels/src/components/plugin_marketplace/marketplace_modal.scss
@@ -277,3 +277,9 @@
         height: 390px;
     }
 }
+
+.more-modal__description-tooltip {
+    .tooltip-inner {
+        text-align: left;
+    }
+}
