Fix style issues with workspace deletion modal.

--- a/webapp/channels/src/components/admin_console/billing/delete_workspace/delete_workspace_modal.scss
+++ b/webapp/channels/src/components/admin_console/billing/delete_workspace/delete_workspace_modal.scss
@@ -12,6 +12,10 @@
         }
     }
 
+    &__Icon {
+        padding-top: 8px;
+    }
+
     &__Title {
         color: var(--sys-denim-center-channel-text);
         font-family: Metropolis;
@@ -22,10 +26,11 @@
 
     &__Usage {
         text-align: left;
+        color: var(--sys-center-channel-text);
 
         &-Highlighted {
             color: black;
-            font-weight: 700;
+            font-weight: bold;
         }
     }
 
