fixing PR comments

--- a/webapp/channels/src/components/user_groups_modal/user_groups_modal.scss
+++ b/webapp/channels/src/components/user_groups_modal/user_groups_modal.scss
@@ -166,6 +166,7 @@
         padding: 0;
 
         .no-results__wrapper {
+            max-width: 350px;
             padding-bottom: 60px;
         }
 
