--- a/webapp/channels/src/components/admin_console/billing/delete_workspace/delete_workspace_modal.scss
+++ b/webapp/channels/src/components/admin_console/billing/delete_workspace/delete_workspace_modal.scss
@@ -25,7 +25,7 @@
     }
 
     &__Usage {
-        color: var(--sys-center-channel-text);
+        color: var(--center-channel-text);
         text-align: left;
 
         &-Highlighted {
@@ -35,6 +35,7 @@
     }
 
     &__Warning {
+        color: var(--center-channel-text);
         text-align: left;
     }
 
