Change to -center-channel-color after seeing warning not to use -center-channel-text.

--- a/webapp/channels/src/components/admin_console/billing/delete_workspace/delete_workspace_modal.scss
+++ b/webapp/channels/src/components/admin_console/billing/delete_workspace/delete_workspace_modal.scss
@@ -25,7 +25,7 @@
     }
 
     &__Usage {
-        color: var(--center-channel-text);
+        color: var(--center-channel-color);
         text-align: left;
 
         &-Highlighted {
@@ -35,7 +35,7 @@
     }
 
     &__Warning {
-        color: var(--center-channel-text);
+        color: var(--center-channel-color);
         text-align: left;
     }
 
