--- a/webapp/channels/src/components/channel_threads_rhs/channel_threads_rhs.scss
+++ b/webapp/channels/src/components/channel_threads_rhs/channel_threads_rhs.scss
@@ -26,7 +26,7 @@
     }
 
     .virtualized-thread-list {
-        scrollbar-color: var(--center-channel-color-32) #fff0;
+        scrollbar-color: rgba(var(--center-channel-rgb), 0.32) #fff0;
         scrollbar-width: thin;
     }
 
