MM-27936: Resize sidebar

--- a/webapp/channels/src/sass/responsive/_desktop.scss
+++ b/webapp/channels/src/sass/responsive/_desktop.scss
@@ -141,7 +141,7 @@
 @media (min-width: 1280px) {
     .sidebar--right {
         &.sidebar--right--expanded {
-            width: min(60vw, 96rem);
+            width: min(60vw, 96rem) !important;
         }
     }
 }
