implement ux feedback

--- a/webapp/boards/src/components/createBoardFromTemplate.scss
+++ b/webapp/boards/src/components/createBoardFromTemplate.scss
@@ -9,7 +9,7 @@
 
         label {
             display: flex;
-            color: rgba(var(--center-channel-color-rgb), 0.8);
+            color: var(--center-channel-color);
             cursor: pointer;
             font-weight: 400;
 
