--- a/webapp/channels/src/sass/utils/_flex.scss
+++ b/webapp/channels/src/sass/utils/_flex.scss
@@ -4,6 +4,10 @@
     display: flex !important;
 }
 
+.justify-content-between {
+    justify-content: space-between;
+}
+
 .align-items-center {
     align-items: center !important;
     -webkit-box-align: center !important;
